@@ -17,6 +17,7 @@ Version 2.5 ->
  - added 'asm' to list of reserved words
  - added JCC_VERSION string to modules using JCC
  - added support for --resources
+ - added support for --import
  - 
 
 Version 2.4 -> 2.5
